--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,9 @@
     = csrf_meta_tag
 
   %body
+    .row
+    .one.columns
 
-    = yield
+      = yield
 
-    = javascript_include_tag "application"
+      = javascript_include_tag "application"
