Dried up new and edit patient forms in to demographic partial

--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -4,18 +4,7 @@
 
   = form_for :patient, url: patient_path(@patient), :method => :put do |f|
     
-    = field_set_tag do 
-      = f.label :nhs_number, "NHS Number" 
-      = f.text_field :nhs_number
-
-      = f.label :surname 
-      = f.text_field :surname
-
-      = f.label :forename
-      = f.text_field :forename
-      
-      = f.label :dob, "DoB" 
-      = f.text_field :dob 
+    = render partial: "patients/demographic_form", locals: { patient: f }
 
     = submit_tag "Update Demographics" 
 
