--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -1,12 +1,12 @@
 %h1 Update Patient Demographics
 
-.large-4.columns
+.large-6.columns
 
   = form_for :patient, url: patient_path(@patient), :method => :put do |f|
-    
+
     = render partial: "patients/demographic_form", locals: { patient: f }
 
-    = submit_tag "Update Demographics" 
+    = submit_tag "Update Demographics"
 
-
-
+= content_for :secondary_nav do
+  = link_to "Back to patient list", patients_path
