Amended layout issues

--- a/app/views/addresses/_address.html.haml
+++ b/app/views/addresses/_address.html.haml
@@ -1,25 +1,15 @@
 %dl
-  %dt
-    Street 1
-  %dd
-    = address.street_1
+  %dt Street 1
+  %dd= address.street_1
 
-  %dt
-    Street 2
-  %dd
-    = address.street_2
+  %dt Street 2
+  %dd= address.street_2
 
-  %dt
-    City
-  %dd
-    = address.city
+  %dt City
+  %dd= address.city
 
-  %dt
-    County
-  %dd
-    = address.county
+  %dt County
+  %dd= address.county
 
-  %dt
-    Postcode
-  %dd
-    = address.postcode
+  %dt Postcode
+  %dd= address.postcode
