--- a/app/views/patients/_demographic_form.html.haml
+++ b/app/views/patients/_demographic_form.html.haml
@@ -1,38 +1,45 @@
-= field_set_tag do
-  %legend
-    Patient Demographics
-
-  %ul.no-bullet
-    %li
-      = patient.label :nhs_number, "NHS Number"
-      = patient.text_field :nhs_number
-
-    %li
-      = patient.label :surname
-      = patient.text_field :surname
-
-    %li
-      = patient.label :paediatric_patient_indicator
-      = patient.check_box :paediatric_patient_indicator
-
-    %li
-      = patient.label :forename
-      = patient.text_field :forename
-
-    %li
-      = patient.label :dob, "DoB"
-      = patient.date_select(:dob, { start_year: (120.years.ago).year, end_year: (18.years.ago).year })
-
-= patient.fields_for :current_address_attributes do |a|
-  %fieldset{:id => "current_address"}
+.large-4.columns
+  = field_set_tag do
     %legend
-      Current Address
+      Patient Demographics
 
-    = render :partial => 'addresses/address_form', :locals => { :a => a }
+    %ul.no-bullet
+      %li
+        = patient.label :nhs_number, "NHS Number"
+        = patient.text_field :nhs_number
 
-= patient.fields_for :address_at_diagnosis_attributes do |a|
-  %fieldset{:id => "address_at_diagnosis"}
-    %legend
-      Address at Diagnosis
+      %li
+        = patient.label :local_patient_id, "Local Patient ID"
+        = patient.text_field :local_patient_id
 
-    = render :partial => 'addresses/address_form', :locals => { :a => a }
+      %li
+        = patient.label :surname
+        = patient.text_field :surname
+
+      %li
+        = patient.label :forename
+        = patient.text_field :forename
+
+      %li
+        = patient.label :dob, "DoB"
+        = patient.date_select(:dob, { start_year: (120.years.ago).year, end_year: (18.years.ago).year })
+
+      %li
+        = patient.label :paediatric_patient_indicator
+        = patient.check_box :paediatric_patient_indicator
+
+.large-4.columns
+  = patient.fields_for :current_address_attributes do |a|
+    %fieldset{:id => "current_address"}
+      %legend
+        Current Address
+
+      = render :partial => 'addresses/address_form', :locals => { :a => a }
+
+.large-4.columns
+  = patient.fields_for :address_at_diagnosis_attributes do |a|
+    %fieldset{:id => "address_at_diagnosis"}
+      %legend
+        Address at Diagnosis
+
+      = render :partial => 'addresses/address_form', :locals => { :a => a }
