--- a/app/views/patients/_patient.html.haml
+++ b/app/views/patients/_patient.html.haml
@@ -1,5 +1,5 @@
 %div
-  %h3= "#{patient.forename} #{patient.surname}, NHS No: #{patient.nhs_number}"
-
-  = render patient.current_address if patient.current_address
-  = render patient.address_at_diagnosis if patient.address_at_diagnosis
+  %span= "#{patient.forename} #{patient.surname}, NHS No: #{patient.nhs_number}"
+  %span= link_to "Demographics", patient_path(patient.id)
+  
+  
