--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -1,13 +1,15 @@
 %h1 Update Patient Demographics
 
 .row
-  .large-6.columns
+  = content_for :secondary_nav do
+    = link_to "Back to patient list", patients_path, class: "button tiny right"
+
+.row
+  .large-12.columns
 
     = form_for :patient, url: patient_path(@patient), :method => :put do |f|
 
       = render partial: "patients/demographic_form", locals: { patient: f }
+    
+      = submit_tag "Update Demographics", class: "button tiny right"
 
-      = submit_tag "Update Demographics"
-
-= content_for :secondary_nav do
-  = link_to "Back to patient list", patients_path
