--- a/app/views/patients/_demographic_form.html.haml
+++ b/app/views/patients/_demographic_form.html.haml
@@ -22,7 +22,7 @@
 
       %li
         = patient.label :dob, "DoB"
-        = patient.date_select(:dob, { start_year: (120.years.ago).year, end_year: (18.years.ago).year })
+        = patient.date_select(:dob, { start_year: (120.years.ago).year, end_year: Time.now.year })
 
       %li
         = patient.label :paediatric_patient_indicator
