Added organisation/practice fields to patient demographics view

--- a/app/assets/stylesheets/patients.css.scss
+++ b/app/assets/stylesheets/patients.css.scss
@@ -6,17 +6,17 @@ dl {
   width:300px;
   float:left;
   margin-right:2em;
+  font-weight: normal;
 }
   
 dt {
-  font-weight:bold;
-  font-size:0.9em;
+  font-size:0.8em;
   margin-bottom:0.7em;
 }
   
 dd {
   color:#444;
-  font-size:0.7em;
+  font-size:0.8em;
   margin:0 0 2em 0;
   padding-left:4.5em;
   line-height:1.5em;
