Added fields to edit/update for organisation/practice codes

--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -1,8 +1,7 @@
-%h1 Update Patient Demographics
-
 .row
-  = content_for :secondary_nav do
-    = link_to "Back to patient list", patients_path, class: "button tiny right"
+  %h1 Update Patient Demographics
+  / = content_for :secondary_nav do
+  = link_to "Back to patient list", patients_path, class: "button tiny right"
 
 .row
   .large-12.columns
