--- a/app/views/patients/_demographic_form.html.haml
+++ b/app/views/patients/_demographic_form.html.haml
@@ -1,45 +1,54 @@
-.large-4.columns
-  = field_set_tag do
-    %legend
-      Patient Demographics
-
-    %ul.no-bullet
-      %li
-        = patient.label :nhs_number, "NHS Number"
-        = patient.text_field :nhs_number
-
-      %li
-        = patient.label :local_patient_id, "Local Patient ID"
-        = patient.text_field :local_patient_id
-
-      %li
-        = patient.label :surname
-        = patient.text_field :surname
-
-      %li
-        = patient.label :forename
-        = patient.text_field :forename
-
-      %li
-        = patient.label :dob, "DoB"
-        = patient.date_select(:dob, { start_year: (120.years.ago).year, end_year: Time.now.year })
-
-      %li
-        = patient.label :paediatric_patient_indicator
-        = patient.check_box :paediatric_patient_indicator
-
-.large-4.columns
-  = patient.fields_for :current_address_attributes do |a|
-    %fieldset{:id => "current_address"}
+.row
+  .large-3.columns
+    = field_set_tag do
       %legend
-        Current Address
+        Patient Demographics
 
-      = render :partial => 'addresses/address_form', :locals => { :a => a }
+      %ul.no-bullet
+        %li
+          = patient.label :nhs_number, "NHS Number"
+          = patient.text_field :nhs_number
 
-.large-4.columns
-  = patient.fields_for :address_at_diagnosis_attributes do |a|
-    %fieldset{:id => "address_at_diagnosis"}
+        %li
+          = patient.label :local_patient_id, "Local Patient ID"
+          = patient.text_field :local_patient_id
+
+        %li
+          = patient.label :surname
+          = patient.text_field :surname
+
+        %li
+          = patient.label :forename
+          = patient.text_field :forename
+
+        %li
+          = patient.label :dob, "DoB"
+          = patient.date_select(:dob, { start_year: (120.years.ago).year, end_year: Time.now.year })
+
+        %li
+          = patient.label :paediatric_patient_indicator
+          = patient.check_box :paediatric_patient_indicator
+  
+  .large-3.columns
+    = patient.fields_for :current_address_attributes do |a|
+      %fieldset{:id => "current_address"}
+        %legend
+          Current Address
+
+        = render :partial => 'addresses/address_form', :locals => { :a => a }
+
+  .large-3.columns
+    = patient.fields_for :address_at_diagnosis_attributes do |a|
+      %fieldset{:id => "address_at_diagnosis"}
+        %legend
+          Address at Diagnosis
+
+        = render :partial => 'addresses/address_form', :locals => { :a => a }
+
+  .large-3.columns
+    = field_set_tag do
       %legend
-        Address at Diagnosis
+        Organisation/Practice
 
-      = render :partial => 'addresses/address_form', :locals => { :a => a }
+      = render :partial => 'organisation_practice_form', :locals => { :patient => patient }
+
