--- a/app/views/patients/_patient.html.haml
+++ b/app/views/patients/_patient.html.haml
@@ -1,5 +1,5 @@
 %div
   %span= "#{patient.forename} #{patient.surname}, NHS No: #{patient.nhs_number}"
-  %span= link_to "Demographics", patient_path(patient.id)
+  %span= link_to "Demographics", demographics_patient_path(patient.id)
   
   
