Added gender field to demo forms/view

--- a/app/views/patients/_demographic_form.html.haml
+++ b/app/views/patients/_demographic_form.html.haml
@@ -22,6 +22,10 @@
           = patient.text_field :forename
 
         %li
+          = patient.label :sex
+          = patient.text_field :sex
+
+        %li
           = patient.label :dob, "DoB"
           = patient.date_select(:dob, { start_year: (120.years.ago).year, end_year: Time.now.year })
 
