--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -17,6 +17,9 @@
       %dt First Name:
       %dd= "#{@patient.forename}"
 
+      %dt Sex:
+      %dd= "#{@patient.sex}"
+
       %dt Date of Birth:
       %dd= "#{@patient.dob}"
 
