Added links and fixed layout issues

--- a/app/views/patients/index.html.haml
+++ b/app/views/patients/index.html.haml
@@ -1,7 +1,7 @@
-%h1 Renal Patients
+%h1 Renal Patients 
 
 .row
-  = link_to "Add a New Patient", new_patient_path, class: "button tiny left"
+  = link_to "Add a New Patient", new_patient_path, class: "button tiny right"
 
 .row
   = render @patients
