--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -11,6 +11,9 @@
       %dt NHS Number:
       %dd= "#{@patient.nhs_number}"
 
+      %dt Local Patient ID:
+      %dd= "#{@patient.local_patient_id}"
+
       %dt Last Name:
       %dd= "#{@patient.surname}"
 
@@ -19,6 +22,9 @@
 
       %dt Sex:
       %dd= "#{@patient.sex}"
+
+      %dt Ethnicity:
+      %dd= "#{@patient.ethnic_category}"
 
       %dt Date of Birth:
       %dd= "#{@patient.dob}"
