Added missing data field

--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -29,6 +29,9 @@
       %dt Date of Birth:
       %dd= "#{@patient.dob}"
 
+      %dt Paediatric Patient:
+      %dd= "#{@patient.paediatric_patient_indicator}"
+
   .large-4.columns
     %dl
       %dt GP Practice Code:
