Fixing update glitch

--- a/app/views/patients/new.html.haml
+++ b/app/views/patients/new.html.haml
@@ -5,10 +5,10 @@
 
 .row
   .large-12.columns
-    
+
     = render partial: "shared/errors", locals: { model: @patient }
-    
-    = form_for :patient, url: patients_path, :method => :post do |f|
+
+    = form_for @patient, :method => :post do |f|
 
       = render partial: "patients/demographic_form", locals: {patient: f }
 
