--- a/app/views/patients/_demographic_form.html.haml
+++ b/app/views/patients/_demographic_form.html.haml
@@ -36,9 +36,9 @@
         %li
           = patient.label :paediatric_patient_indicator
           = patient.check_box :paediatric_patient_indicator
-  
+
   .large-3.columns
-    = patient.fields_for :current_address_attributes do |a|
+    = patient.fields_for :current_address_attributes, patient.object.current_address do |a|
       %fieldset{:id => "current_address"}
         %legend
           Current Address
@@ -46,7 +46,7 @@
         = render :partial => 'addresses/address_form', :locals => { :a => a }
 
   .large-3.columns
-    = patient.fields_for :address_at_diagnosis_attributes do |a|
+    = patient.fields_for :address_at_diagnosis_attributes, patient.object.address_at_diagnosis do |a|
       %fieldset{:id => "address_at_diagnosis"}
         %legend
           Address at Diagnosis
