--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -6,9 +6,9 @@
 .row
   .large-12.columns
 
-    = form_for :patient, url: patient_path(@patient), :method => :put do |f|
+    = form_for @patient, :method => :put do |f|
 
       = render partial: "patients/demographic_form", locals: { patient: f }
-    
+
       = submit_tag "Update Demographics", class: "button tiny right"
 
