Created 'add an encounter' to 'clinical summary' with tests, wip

--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -2,5 +2,7 @@
 
 = link_to "Back to patient list", patients_path, class: "button tiny right"
 
+%h2= "#{@patient.forename} #{@patient.surname}"
 
+= link_to "Add an Encounter/Event", new_encounter_event_path, class: "button tiny left"
 
