--- a/app/views/encounter_events/index.html.haml
+++ b/app/views/encounter_events/index.html.haml
@@ -1,9 +1,12 @@
-%h1 Encounters/Events
+.row
+  %h1 Encounters/Events
 
-= link_to "Back to patient list", patients_path, class: "button tiny right"
+  = link_to "Back to patient list", patients_path, class: "button tiny right"
 
 .row
-  %div
+  = field_set_tag do
+    %legend
     %ul.no-bullet
       - @encounter_events.each do |e|
-        %li= "#{e.enc_date}, #{e.enc_descript}"
+
+        = render partial: "encounter_events/encounter_events", locals: { e: e }
