--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -5,15 +5,15 @@
 
   %h2= "#{@patient.forename} #{@patient.surname}"
 
-  = link_to "Add an Encounter/Event", new_encounter_event_path, class: "button tiny left"
+  = link_to "Add an Event", new_event_path, class: "button tiny left"
 
 .row
   = field_set_tag do
     %legend
-      = link_to "Encounters/Events", encounter_events_path
+      = link_to "Events", events_path
     %ul.no-bullet
-      - @encounter_events.each do |e|
+      - @encounters.each do |e|
 
-        = render partial: "encounter_events/encounter_events", locals: { e: e }
+        = render partial: "event/event", locals: { e: e }
 
     
