--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,9 +12,9 @@
     = csrf_meta_tag
 
   %body
-
-    = flash[:notice]
-
+    .row
+      = flash[:notice]
+    
     .row
       .large-12.columns
         = yield
