Fixed layout and sub nav links.

--- a/app/assets/stylesheets/patient_events.css.scss
+++ b/app/assets/stylesheets/patient_events.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the encounter_events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+select {
+  display: inline-block;
+  width: 18%;
+}
