--- a/app/views/patients/_patient.html.haml
+++ b/app/views/patients/_patient.html.haml
@@ -1,4 +1,4 @@
-%div
+= field_set_tag do
   %span= "#{patient.forename} #{patient.surname}, NHS No: #{patient.nhs_number}"
   %span= link_to "Demographics", demographics_patient_path(patient.id)
   %span= link_to "Clinical Summary", clinical_summary_patient_path(patient.id)
