--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
       %ul.title-area
         %li.name
           %h1 
-            = link_to "Renalwarev2", "#"
+            = link_to "Renalwarev2", patients_path
  
       %section.top-bar-section
         %ul.right
