Added dropdown for patient_event_types when creating a new event and displaying saved values.

--- a/app/views/patient_events/_patient_event.html.haml
+++ b/app/views/patient_events/_patient_event.html.haml
@@ -1,1 +1,1 @@
-%li= "Event Date/Time: #{e.date_time}, Event Type: #{e.patient_event_type}, Description: #{e.description}"
+%li= "Event Date/Time: #{patient_event.date_time}, Event Type: #{patient_event.patient_event_type.name}, Description: #{patient_event.description}"
