--- a/app/views/patient_events/index.html.haml
+++ b/app/views/patient_events/index.html.haml
@@ -3,13 +3,13 @@
 
 .row
   %ul.no-bullet
-    - @patient_events.each do |e|
+    - @patient_events.each do |p|
       = field_set_tag do
-        %li= "Event Date/Time : #{e.date_time}" 
-        %li= "Entered by: #{e.user_id}" 
-        %li= "Event Type: #{e.patient_event_type}" 
-        %li= "Description: #{e.description}" 
-        %li= "Notes: #{e.notes}" 
+        %li= "Event Date/Time: #{p.date_time}"
+        %li= "Entered by: #{p.user_id}"
+        %li= "Event Type: #{p.patient_event_type.name}"
+        %li= "Description: #{p.description}"
+        %li= "Notes: #{p.notes}"
 
 = content_for :secondary_nav do
   %li
