--- a/app/views/patients/_demographic_form.html.haml
+++ b/app/views/patients/_demographic_form.html.haml
@@ -34,16 +34,16 @@
             = patient.label :ethnic_category, "Ethnicity"
             = patient.text_field :ethnic_category
       
-      .large-12.columns
-        %ul.no-bullet
-          %li
-            = patient.label :dob, "DoB"
-            = patient.date_select(:dob, start_year: (120.years.ago).year, end_year: Time.now.year , order: [:day, :month, :year])
+      .large-12.columns.row
+        = patient.label :dob, "DoB"
+
+      .large-5.columns.left
+        = patient.date_select(:dob, {start_year: (120.years.ago).year, end_year: Time.now.year , order: [:day, :month, :year]}, class: "dob")
       
-          %ul.no-bullet
-            %li
-              = patient.label :paediatric_patient_indicator
-              = patient.check_box :paediatric_patient_indicator
+      .large-5.columns.row.right
+        = patient.check_box :paediatric_patient_indicator
+        = patient.label :paediatric_patient_indicator
+
 
   .large-4.columns
     = patient.fields_for :current_address_attributes, patient.object.current_address do |a|
