Able to edit a patient event type with test

--- a/app/views/patient_event_types/index.html.haml
+++ b/app/views/patient_event_types/index.html.haml
@@ -2,8 +2,12 @@
 
 - @patient_event_types.each do |t|
 
-  %ul
-    %li= t.name
+  %ul.no-bullet
+    %li
+      = t.name
+    %li 
+      = link_to "Edit", edit_patient_event_type_path(t.id) 
+
 
 = content_for :secondary_nav do
   %li
