Fix 'Add New Patient Event Type' header

--- a/app/views/patient_event_types/new.html.haml
+++ b/app/views/patient_event_types/new.html.haml
@@ -1,4 +1,4 @@
-%h1 Add a New Patient Type
+%h1 Add a New Patient Event Type
 
 .row
   = render partial: "shared/errors", locals: { model: @patient_event_type }
